# Quanta

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.bench.yml  docker-compose.test.yml  mix.exs  package-lock.json
.github/workflows/: bench.yml  wasm.yml
apps/quanta_core/: mix.exs
apps/quanta_core/lib/: quanta_core.ex
apps/quanta_core/lib/quanta/: actor.ex  actor_id.ex  effect.ex  envelope.ex  hlc.ex  manifest.ex  module_resolver.ex  state_kind.ex  ulid.ex
apps/quanta_core/test/: quanta_core_test.exs
apps/quanta_core/test/quanta/: actor_id_test.exs  actor_test.exs  effect_test.exs  envelope_test.exs  hlc_test.exs  manifest_test.exs  state_kind_test.exs  ulid_test.exs
apps/quanta_distributed/: mix.exs
apps/quanta_distributed/lib/: quanta_distributed.ex
apps/quanta_distributed/lib/quanta/: drain.ex  rate_limit.ex  supervisor.ex  syn_config.ex  telemetry.ex
apps/quanta_distributed/lib/quanta_distributed/: application.ex
apps/quanta_distributed/test/: quanta_distributed_test.exs  test_helper.exs
apps/quanta_distributed/test/quanta/: drain_hooks_test.exs  drain_integration_test.exs  drain_test.exs  rate_limit_test.exs  supervisor_test.exs  telemetry_test.exs
apps/quanta_distributed/test/quanta_distributed/: application_boot_order_test.exs  supervisor_structure_test.exs
apps/quanta_distributed/test/support/: cluster_helpers.ex  nats_helpers.ex  peer_infra.ex  test_actors.ex  (+1 more)
apps/quanta_nifs/: mix.exs
apps/quanta_nifs/lib/: quanta_nifs.ex
apps/quanta_nifs/test/: crdt_convergence_property_test.exs  delta_encoder_test.exs  ephemeral_store_test.exs  js_executor_test.exs  loro_engine_test.exs  nats_jetstream_test.exs  quanta_nifs_test.exs  schema_compiler_test.exs  test_helper.exs  wasm_runtime_test.exs
apps/quanta_web/: mix.exs
apps/quanta_web/lib/: quanta_web.ex
apps/quanta_web/test/: quanta_web_test.exs  test_helper.exs
benchmarks/competitors/: .gitignore
benchmarks/competitors/akka/: Dockerfile  build.sbt
benchmarks/competitors/orleans/: BenchRunner.cs  Dockerfile  Orleans.Bench.csproj  Program.cs
benchmarks/competitors/protoactor/: Dockerfile  go.mod  main.go
benchmarks/competitors/quanta/: .dockerignore  Dockerfile  bench.exs  mix.exs
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/benchmarks/: particle-world-1k.md
examples/particle-world/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/particle-world/src/: hud.ts  input.ts  main.ts  predictor.ts  render.ts  state.ts  transport.ts
examples/quanta-code/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/quanta-code/src/: connection.ts  editor.ts  ephemeral-sync.ts  execution.ts  file-tree.ts  layout.ts  main.ts  phoenix.d.ts  presence.ts  project.ts  style.css  sync.ts  tab-bar.ts  types.ts
rust/: Cargo.toml
rust/fixtures/: build.sh
rust/fixtures/counter-actor/: Cargo.toml
rust/quanta-core-rs/: Cargo.toml
rust/quanta-core-rs/benches/: delta_bench.rs
rust/quanta-core-rs/fuzz/: Cargo.toml
rust/quanta-core-rs/fuzz/fuzz_targets/: fuzz_bridge_frame.rs  fuzz_wire_frame.rs
rust/quanta-core-rs/src/: bridge.rs  lib.rs
rust/quanta-core-rs/tests/: proptest_wire.rs  slo_test.rs
rust/quanta-nifs/: Cargo.toml
rust/quanta-nifs/src/: bridge_codec.rs  codec.rs  delta_encoder.rs  ephemeral_store.rs  js_executor.rs  lib.rs  loro_engine.rs  macros.rs  nats_jetstream.rs  resources.rs  safety.rs  schema_compiler.rs  wasm_runtime.rs
rust/quanta-nifs/src/nats/: consumer.rs  kv.rs  mod.rs  publish.rs  stream.rs
rust/quanta-nifs/tests/: codec_malformed_input_test.rs  duplicate_macro_test.rs  engine_identity_test.rs  js_publish_async_contract_test.rs  js_publish_async_wire_contract_test.rs  nats_backpressure_test.rs  scheduler_annotations_test.rs
rust/quanta-nifs/wit/: quanta-actor.wit
rust/quanta-particle-demo/: Cargo.toml
rust/quanta-particle-demo/src/: executor.rs  fanout.rs  input.rs  lib.rs  load.rs  schema.rs  server_info.rs
rust/quanta-particle-demo/tests/: load_smoke_test.rs  particle_runtime_test.rs  wire_fanout_test.rs
rust/quanta-realtime-server/: Cargo.toml
rust/quanta-realtime-server/examples/: protocol_probe.rs
rust/quanta-realtime-server/src/: auth.rs  bridge_health.rs  bridge_rpc.rs  capacity.rs  command.rs  config.rs  connection.rs  degraded.rs  delta_envelope.rs  effect_io.rs  endpoint.rs  error.rs  fanout.rs  ids.rs  lib.rs  main.rs  manager.rs  metrics.rs  pacing.rs  reconnect.rs  server.rs  session.rs  session_store.rs  stubs.rs  sync.rs  tls.rs  traits.rs  types.rs  watchdog.rs  webtransport_session.rs  ws_listener.rs  ws_session.rs  zone_transfer.rs
rust/quanta-realtime-server/src/checkpoint/: codec.rs  mod.rs  writer.rs
rust/quanta-realtime-server/src/demo/: executor.rs  mod.rs
rust/quanta-realtime-server/src/interest/: mod.rs  priority.rs  visible_set.rs
rust/quanta-realtime-server/src/island/: handle.rs  mod.rs  registry.rs  state_machine.rs
rust/quanta-realtime-server/src/spatial/: grid.rs  mod.rs  position_table.rs
rust/quanta-realtime-server/src/testing/: bot.rs  certs.rs  endpoint_helpers.rs  harness.rs  mock_session.rs  mod.rs  recording.rs
rust/quanta-realtime-server/src/tick/: engine.rs  fault.rs  mod.rs  timer.rs  types.rs
rust/quanta-realtime-server/tests/: auth_hardening_test.rs  bridge_rpc_test.rs  capacity_test.rs  checkpoint_test.rs  endpoint_test.rs  input_burst_cap_test.rs  interest_test.rs  lifecycle_test.rs  pacing_test.rs  particle_runtime_test.rs  passivation_test.rs  rate_limit_per_ip_test.rs  reader_panic_observable_test.rs  snapshot_cap_test.rs  spatial_test.rs  sync_test.rs  tick_engine_test.rs  webtransport_test.rs  wire_endtoend_test.rs  ws_session_cleanup_test.rs  ws_test.rs  zone_transfer_integration_test.rs  zone_transfer_replay_test.rs  zone_transfer_test.rs
rust/quanta-realtime-server/tests/common/: mod.rs
rust/quanta-wasm-decoder/: Cargo.toml
rust/quanta-wasm-decoder/src/: lib.rs
rust/quanta-wasm-decoder/tests/: initial_state_flag_parity_test.rs  web.rs
test/nats/: server.conf
(+217 files in other folders)
