[package]
name = "quanta-realtime-server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
bytes = "1"
bitcode = "0.6"
governor = "0.8"
tracing = "0.1"
rcgen = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
