[package]
name = "quanta-realtime-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quanta-realtime-server"
path = "src/main.rs"

[dependencies]
quanta-core-rs = { path = "../quanta-core-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-nats = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
