[package]
name = "quanta-realtime-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quanta-realtime-server"
path = "src/main.rs"

[features]
test-utils = []

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
bytes = "1"
bitcode = "0.6"
governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.13"
async-nats = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
crossbeam-channel = "0.5"
hmac = "0.12"
sha2 = "0.10"
arc-swap = "1"
quanta-core-rs = { path = "../quanta-core-rs" }
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

[[example]]
name = "protocol_probe"
path = "examples/protocol_probe.rs"
required-features = ["test-utils"]

[dev-dependencies]
quanta-realtime-server = { path = ".", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "test-util"] }
url = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
