[package]
name = "quanta-wasm-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quanta-core-rs = { path = "../quanta-core-rs" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
bitcode = "0.6"

[dev-dependencies]
quanta-core-rs = { path = "../quanta-core-rs", features = ["test-support"] }
wasm-bindgen-test = "0.3"

# wasm-opt disabled: bundled binary crashes on macOS/CI (wasm-pack 0.14).
# Release build with opt-level=z + LTO achieves 30KB gzipped without it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
